--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <h1>hi welcom to pure games</h1>
+   
+
+<form method="get" action="file:///home/chronos/u-3375de6ca1b33d49a730b4bde76b5a42cedd394c/MyFiles/Downloads/_pure_games_15026258.apk">
+    <button type="download app (apk)">Continue</button>
+</form>
