--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>hi welcom to pure games</h1>
    
 
-<button type="download app (apk)" action="file:///home/chronos/u-3375de6ca1b33d49a730b4bde76b5a42cedd394c/MyFiles/Downloads/_pure_games_15026258.apk"<"download"</button> 
+
     
 
+<button onclick="window.location.href='file:///home/chronos/u-3375de6ca1b33d49a730b4bde76b5a42cedd394c/MyFiles/Downloads/_pure_games_15026258.apk'">download app(apk)</button>
